<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe">

    <TextView
        android:id="@+id/textViewTitleRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTilteRecipe"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/textIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtIngredient"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleRecipe"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIngredients"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2"
        app:layout_constraintVertical_bias="0.07999998" />
</androidx.constraintlayout.widget.ConstraintLayout>